# urdf-editor

./: .gitignore  CLAUDE.md  Cargo.toml  Packager.toml  Packager.windows-cross.toml  TERMS_OF_SERVICE.txt  package-lock.json  package.json
.cargo/: config.toml
.claude/skills/refactor/: SKILL.md
.github/workflows/: deploy-pages.yml  release.yml
crates/rk-cad/: Cargo.toml
crates/rk-cad/src/: lib.rs
crates/rk-cad/src/feature/: mod.rs
crates/rk-cad/src/history/: mod.rs
crates/rk-cad/src/kernel/: opencascade.rs  traits.rs  truck.rs
crates/rk-cad/src/sketch/: constraint.rs  solver.rs
crates/rk-core/: Cargo.toml
crates/rk-core/src/: constants.rs  lib.rs  part.rs  project.rs
crates/rk-core/src/assembly/: joint.rs  mod.rs  queries.rs  tree_cache.rs
crates/rk-core/src/export/: mod.rs  options.rs  xml.rs
crates/rk-core/src/import/: geometry.rs  mod.rs  options.rs
crates/rk-core/src/mesh/: dae.rs  mod.rs  normals.rs  obj.rs  step.rs
crates/rk-core/src/primitive/: sphere.rs
crates/rk-frontend/: Cargo.toml  Trunk.toml  build.rs  index.html
crates/rk-frontend/src/: lib.rs  main.rs  update.rs
crates/rk-frontend/src/actions/: assembly.rs  file.rs  file_wasm.rs  mod.rs  part.rs  sketch.rs
crates/rk-frontend/src/app/: dock.rs  menu.rs  mod.rs  overlays.rs  welcome.rs
crates/rk-frontend/src/panels/: feature_tree.rs  joint_list.rs  mod.rs  preferences.rs
crates/rk-frontend/src/panels/part_list/: mod.rs  toolbar.rs  tree.rs
crates/rk-frontend/src/panels/properties/: component.rs  helpers.rs  mod.rs
crates/rk-frontend/src/panels/properties/components/: geometry.rs  joint.rs  joint_points.rs  mod.rs  physical.rs  transform.rs
crates/rk-frontend/src/panels/viewport/: camera_overlay.rs  mod.rs
crates/rk-frontend/src/panels/viewport/overlays/: axes_indicator.rs  camera_settings.rs  dialogs.rs  gizmo_toolbar.rs  sketch_toolbar.rs
crates/rk-frontend/src/state/: mod.rs  sketch_mode.rs  viewport.rs
crates/rk-frontend/src/state/viewport/: gizmo.rs  render_state.rs
crates/rk-frontend/src/theme/: dark.rs  light.rs  mod.rs  palette.rs
crates/rk-renderer/: Cargo.toml
crates/rk-renderer/src/: axis.rs  camera.rs  config.rs  constants.rs  grid.rs  instanced.rs  lib.rs  marker.rs  mesh.rs  renderer.rs  vertex.rs
crates/rk-renderer/src/gizmo/: collision.rs  geometry.rs  mod.rs
crates/rk-renderer/src/renderer/: lighting_system.rs  mod.rs  part_manager.rs  render_pass.rs
crates/rk-renderer/src/scene/: bounds.rs
crates/rk-renderer/src/shaders/: axis.wgsl  gizmo.wgsl  grid.wgsl  marker.wgsl  mesh.wgsl  plane_selector.wgsl
crates/rk-renderer/src/sub_renderers/: axis.rs  grid_legacy.rs  marker.rs  mesh.rs  mod.rs  plane_selector.rs  sketch.rs
crates/rk-renderer/src/sub_renderers/gizmo/: geometry.rs  mod.rs
crates/urdf-core/: Cargo.toml
crates/urdf-core/src/: assembly.rs  constants.rs  export.rs  geometry.rs  import.rs  inertia.rs  lib.rs  mesh.rs  part.rs  primitive.rs  stl.rs
crates/urdf-core/src/assembly/: mod.rs  types.rs
crates/urdf-core/src/mesh/: obj.rs
crates/urdf-core/src/primitive/: box_mesh.rs  cylinder.rs  mod.rs
crates/urdf-frontend/: Cargo.toml  index.html
crates/urdf-frontend/src/: app.rs  app_state.rs  lib.rs  main.rs  viewport_state.rs
crates/urdf-frontend/src/actions/: assembly.rs  file.rs  file_wasm.rs  mod.rs  part.rs
crates/urdf-frontend/src/app/: dock.rs  menu.rs  mod.rs  overlays.rs
crates/urdf-frontend/src/panels/: mod.rs  part_list.rs  properties.rs  viewport.rs
crates/urdf-frontend/src/panels/part_list/: mod.rs  toolbar.rs  tree.rs
crates/urdf-frontend/src/panels/properties/: component.rs  helpers.rs  mod.rs
crates/urdf-frontend/src/panels/properties/components/: geometry.rs  joint_points.rs  mod.rs  physical.rs  transform.rs  visual.rs
crates/urdf-frontend/src/panels/viewport/: camera_overlay.rs  mod.rs
crates/urdf-frontend/src/state/: editor.rs  mod.rs  viewport.rs
crates/urdf-renderer/src/: axis.rs  camera.rs  constants.rs  gizmo.rs  grid.rs  lib.rs  marker.rs  mesh.rs  pipeline.rs  renderer.rs
crates/urdf-renderer/src/gizmo/: collision.rs  geometry.rs  mod.rs
crates/urdf-renderer/src/shaders/: gizmo.wgsl
dev/: index.html  rk-197cf62b8b0d7ec2.js  rk-197cf62b8b0d7ec2_bg.wasm  rk-358cc88d5d36090c.js  rk-358cc88d5d36090c_bg.wasm  rk-380b67931da9b789.js  rk-38f03d34135cc2e7.js  rk-4d24807f448d0d68.js  rk-4dbe3a4db629d72f.js  rk-93296a5b3ffe4a8d.js  rk-a6e0edfefc71d946.js  rk-b80582e8a755c0cd.js  rk-bdbbc7d4ff8d58c4.js  rk-bdbbc7d4ff8d58c4_bg.wasm  rk-cc1c9fc6436de0fe.js  rk-e77ffafd744f349f.js
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/content/docs/: index.mdx
docs/src/content/docs/getting-started/: installation.mdx  quick-start.mdx
docs/src/styles/: custom.css
