[workspace]
resolver = "2"
members = [
    "crates/rk-core",
    "crates/rk-renderer",
    "crates/rk-frontend",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["nop"]

[workspace.dependencies]
# Graphics (matching wiz versions)
wgpu = "27.0"
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = ["wgpu", "default_fonts"] }
egui_dock = "0.18"
egui-wgpu = "0.33"

# WASM
web-sys = "0.3"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
log = "0.4"

# Math
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }

# STL/URDF/Mesh formats
stl_io = "0.7"
urdf-rs = "0.9"
tobj = "4"
dae-parser = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde", "js"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
rfd = "0.15"
ureq = { version = "3", features = ["json"] }
semver = "1"
open = "5"

# Internal crates
rk-core = { path = "crates/rk-core" }
rk-renderer = { path = "crates/rk-renderer" }
rk-frontend = { path = "crates/rk-frontend" }
