[package]
name = "rk-cad"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CAD kernel abstraction and sketch system for RK"

[features]
default = ["truck"]
opencascade = ["dep:opencascade-sys", "dep:cxx"]
opencascade-builtin = ["opencascade", "opencascade-sys/builtin"]
truck = ["dep:truck-modeling", "dep:truck-meshalgo", "dep:truck-topology", "dep:truck-polymesh", "dep:truck-shapeops"]

[dependencies]
# Workspace dependencies
uuid = { workspace = true }
glam = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

# Optional: OpenCASCADE (C++ bindings)
# Use GitHub version with default-features = false to link against pre-installed OCCT
opencascade-sys = { git = "https://github.com/NOPLAB/opencascade-rs", optional = true, default-features = false }
cxx = { version = "1.0", optional = true }

# Optional: Truck (Pure Rust B-Rep)
truck-modeling = { version = "0.6", optional = true }
truck-meshalgo = { version = "0.4", optional = true }
truck-topology = { version = "0.6", optional = true }
truck-polymesh = { version = "0.6", optional = true }
truck-shapeops = { version = "0.4", optional = true }

[dev-dependencies]
approx = "0.5"
