[package]
name = "rk-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
cad = ["dep:rk-cad"]

[dependencies]
glam = { workspace = true, features = ["serde"] }
serde = { workspace = true }
ron = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
urdf-rs = { workspace = true }
stl_io = { workspace = true }
bytemuck = { workspace = true }
tobj = { workspace = true }
dae-parser = { workspace = true }
rk-cad = { path = "../rk-cad", optional = true }

[dev-dependencies]
tempfile = "3"
