[package]
name = "rk-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints.rust]
missing_docs = "warn"

[dependencies]
rk-core = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
