[package]
name = "urdf-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true, features = ["serde"] }
serde = { workspace = true }
ron = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
urdf-rs = { workspace = true }
stl_io = { workspace = true }
bytemuck = { workspace = true }
tobj = { workspace = true }

[dev-dependencies]
tempfile = "3"
